--- a/main.html
+++ b/main.html
@@ -6,7 +6,9 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 
-<body>
+<body><p id="yellow" style="background-color: yellow; border: 1px solid green;">Paragraph-1</p>
+    <p id="red" style="background-color: red; border: 1px solid black;">Paragraph-2</p>
+    <p id="green" style="background-color: green; border: 1px solid yellow;">Paragraph-3</p>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
